# python_cookbook

./: pyproject.toml
src/python_cookbook/: chapter3_numbers_dates_and_times.py  chapter_0.py  chapter_10_modules_and_packages.py  chapter_11_network_and_web_programming.py  chapter_1_data_structures_and_algorithms.py  chapter_2_string_and_text.py  chapter_4_lterators_and_generators.py  chapter_5_file_and_io.py  chapter_7_functions.py  chapter_8_casses_and_objects.py  chapter_9_metaprogramming.py  chpter_6_data_encoding_and_processing.py  data_structures_and_algorithms.py  some_text.text
src/python_cookbook/chapter_11/: test1_udp_client.py  test1_udp_server.py  test2_udp_client.py  test2_udp_server.py  test3_udp_server.py
src/python_cookbook/graphics/: __init__.py
src/python_cookbook/graphics/format/: __init__.py  jpg.py  png.py
src/python_cookbook/graphics/primitive/: __init__.py  fill.py
src/python_cookbook/mymodule/: b.py
src/python_cookbook/test_files/: pickle_file  some_text.text  stocks.csv  test_file3  xml_from_planet_python_org.xml  файл_на_кирилице
src/python_tutorials/: desctiptors.py  regular_expression_HOWTO.py
